traccia_1_4_Salesforce/force-app/main/default/objects/Stanza__c/Stanza__c.object-meta.xml
<CustomObject>
    <label>Stanza</label>
    <nameField>
        <label>Stanza Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stanze</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>