traccia_1_4_Salesforce/force-app/main/default/objects/Stanza__c/fields/costo_per_notte__c.field-meta.xml
<CustomField>
    <fullName>costo_per_notte__c</fullName>
    <label>Costo per Notte</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>