traccia_1_4_Salesforce/force-app/main/default/objects/Stanza__c/fields/descrizione__c.field-meta.xml
<CustomField>
    <fullName>descrizione__c</fullName>
    <label>descrizione</label>
    <type>TextArea</type>
</CustomField>