traccia_1_4_Salesforce/force-app/main/default/objects/Stanza__c/fields/num_letti_singoli__c.field-meta.xml
<CustomField>
    <fullName>num_letti_singoli__c</fullName>
    <label>Numero Letti SIngoli</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>