traccia_1_4_Salesforce/force-app/main/default/objects/Stanza__c/fields/tipologia_stanza__c.field-meta.xml
<CustomField>
    <fullName>tipologia_stanza__c</fullName>
    <label>tipologia stanza</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Camera_Standard</fullName>
            </value>
            <value>
                <fullName>Camera_Deluxe</fullName>
            </value>
            <value>
                <fullName>Suite_Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>