traccia_1_4_Salesforce/force-app/main/default/objects/Stanza__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>tipologia_stanza__c</columns>
    <columns>costo_per_notte__c</columns>
    <columns>num_letti_singoli__c</columns>
    <columns>num_letti_matrimoniali__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>